--- a/hims-frontend/src/app/dashboard/home/home.component.html
+++ b/hims-frontend/src/app/dashboard/home/home.component.html
@@ -60,7 +60,7 @@
         <div class="card" [routerLink]="['/dashboard/operations/item-damage']">
             <div class="card-body">
                 <h1 class="card-title text-center"><i class="bi bi-database-slash"></i></h1>
-                <h6 class="card-subtitle mb-2 mt-3 text-center">Item Damage</h6>
+                <h6 class="card-subtitle mb-2 mt-3 text-center">Item Discard</h6>
             </div>
         </div>
     </div>
@@ -72,7 +72,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xl-2 col-md-4 col-6 mt-4" [routerLink]="['/dashboard/reporting/report']"  *ngIf="role === 1">
+    <div class="col-xl-2 col-md-4 col-6 mt-4" [routerLink]="['/dashboard/reporting/report']">
         <div class="card">
             <div class="card-body">
                 <h1 class="card-title text-center"><i class="bi bi-journal"></i></h1>
