--- a/hims-frontend/src/app/dashboard/operations/item-receive/edit/edit.component.html
+++ b/hims-frontend/src/app/dashboard/operations/item-receive/edit/edit.component.html
@@ -22,21 +22,25 @@
                 </div>
                 <div class="col-md-2 mt-2">
                     <label class="form-label">Opening Balance</label>
-                    <input type="text" class="form-control" ngModel name="opening_balance" #opening_balance="ngModel" required>
+                    <input type="number" class="form-control" [disabled]="editableOB" [ngModel]="ob" name="opening_balance" #opening_balance="ngModel" required>
                 </div>
                 <div class="col-md-2 mt-2">
                     <label class="form-label">Quantity</label>
-                    <input type="text" class="form-control" ngModel name="quantity_received" #quantity_received="ngModel" required>
+                    <input type="number" class="form-control" ngModel name="quantity_received" #quantity_received="ngModel" required>
                 </div>
                 <div class="col-md-2 mt-2">
                     <label class="form-label">Price Per Unit</label>
-                    <input type="text" class="form-control" ngModel ngModel name="price_per_unit" #price_per_unit="ngModel" required>
+                    <input type="text" class="form-control" ngModel name="price_per_unit" #price_per_unit="ngModel" required>
                 </div>
                 <div class="col-md-2 mt-2">
                     <label class="form-label">Expiry Date</label>
                     <input type="date" class="form-control" ngModel name="expiry" #expiry="ngModel" required>
                 </div>
-                <div class="col-md-12 mt-2">
+                <div class="col-md-2 mt-2">
+                    <label class="form-label">Minimum Order Value</label>
+                    <input type="text" class="form-control" disabled [(ngModel)]="min" name="min_order" required>
+                </div>
+                <div class="col-md-8 mt-2">
                     <label class="form-label">Remarks</label>
                     <input type="text" class="form-control" ngModel name="remarks" #remarks="ngModel">
                 </div>
@@ -47,7 +51,6 @@
         </form>
     </div>
     <div class="table-responsive">
-        <hr>
         <div class="text-end" *ngIf="items[0]">
             <button class="btn btn-primary mb-2" (click)="onSubmit();">Save</button>
         </div>
