--- a/hims-frontend/src/app/dashboard/reporting/report/report.component.html
+++ b/hims-frontend/src/app/dashboard/reporting/report/report.component.html
@@ -1,1 +1,72 @@
-<p>report works!</p>
+<div class="text-center">
+    <h2>Report</h2>
+</div>
+<div class="mt-5 px-5">
+    <form #report="ngForm" (ngSubmit)="onGetReport(report)">
+        <div class="row">
+            <div class="col-md-2">
+                <label class="form-label">Start Date</label>
+                <input type="date" class="form-control" name="start_date" ngModel #start_date="ngModel" required>
+            </div>
+            <div class="col-md-2">
+                <label class="form-label">End Date</label>
+                <input type="date" class="form-control" name="end_date" ngModel #end_date="ngModel" required>
+            </div>
+            <div class="col-md-2">
+                <label class="form-label">Select Hotel</label>
+                <select class="form-select" name="hotel_id" ngModel #hotel_id="ngModel" required>
+                    <option disabled selected>---Select Hotel---</option>
+                    <option *ngFor="let h of hotels" [value]="h.id">{{h.name}}</option>
+                </select>
+            </div>
+            <div class="col-md-2">
+                <label class="form-label">Select Department</label>
+                <select class="form-select" name="department_id" ngModel #department_id="ngModel">
+                    <option disabled selected>---Select Department---</option>
+                    <option *ngFor="let d of departments" [value]="d.id">{{d.name}}</option>
+                </select>
+            </div>
+            <div class="col-md-2">
+                <label class="form-label">Select Item</label>
+                <select class="form-select" name="item_id" ngModel #item_id="ngModel">
+                    <option disabled selected>---Select Item---</option>
+                    <option *ngFor="let i of items" [value]="i.id">{{ i.name }}</option>
+                </select>
+            </div>
+            <div class="col-md-2">
+                <button class="btn btn-primary" style="margin-top: 31px;" type="submit"><i class="bi bi-search"></i></button>
+            </div>
+        </div>
+    </form>
+    <hr>
+</div>
+<div class="px-5 py-2">
+    <table class="table table-bordered" *ngIf="reports[0]">
+        <thead>
+            <tr>
+                <th scope="col">S.No.</th>
+                <th scope="col">Date</th>
+                <th scope="col">Item</th>
+                <th scope="col">Opening Balance</th>
+                <th scope="col">Received</th>
+                <th scope="col">Returned</th>
+                <th scope="col">Discarded</th>
+                <th scope="col">Transferred</th>
+                <th scope="col">Closing Balance</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let r of reports; let i=index">
+                <td>{{ i+1 }}</td>
+                <td>{{ r.date_range | date: 'dd/MM/YYYY'}}</td>
+                <td>{{ r.name }}</td>
+                <td>{{ r.sod_opening_balance }}</td>
+                <td>{{ r.quantity_received }}</td>
+                <td>{{ r.quantity_returned }}</td>
+                <td>{{ r.quantity_damaged }}</td>
+                <td>{{ r.quantity_transferred }}</td>
+                <td>0</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
