--- a/hims-frontend/src/app/dashboard/operations/item-receive/view/view.component.html
+++ b/hims-frontend/src/app/dashboard/operations/item-receive/view/view.component.html
@@ -1,12 +1,34 @@
 <section class="mt-4 px-5">
-    <div class="d-flex justify-content-between">
-        <h5>Item(s) Received</h5>
-        <button class="btn btn-primary" (click)="onRouteReceiveItem()">+ Receive</button>
-    </div>  
+    <form #search="ngForm" (ngSubmit)="onSearchItemReceived(search)">
+        <div class="row">
+            <div class="col-md-2">
+                <label class="form-label">Start Date</label>
+                <input type="date" class="form-control" name="start_date" #start_date="ngModel" ngModel required>
+            </div>
+            <div class="col-md-2">
+                <label class="form-label">End Date</label>
+                <input type="date" class="form-control" name="end_date" #end_date="ngModel" ngModel required>
+            </div>
+            <div class="col-md-2" *ngIf="isAdmin">
+                <label class="form-label">Hotel</label>
+                <select class="form-select" name="hotel" [ngModel]="''" #hotel="ngModel" required>
+                    <option disabled value="">---Select Hotel---</option>
+                    <option *ngFor="let h of hotels" [value]="h.id">{{ h.name }}</option>
+                </select>
+            </div>
+            <div class="col-md-2" *ngIf="isAdmin">
+                <label class="form-label">Department</label>
+                <select class="form-select" name="dept" [ngModel]="''" #dept="ngModel" required>
+                    <option disabled value="">---Select Department---</option>
+                    <option *ngFor="let d of departments" [value]="d.id">{{ d.name }}</option>
+                </select>
+            </div>
+            <div class="col-md-1">
+                <button class="btn btn-primary" style="margin-top: 31px;"><i class="bi bi-search"></i></button>
+            </div>
+        </div>  
+    </form>
     <hr>
-    <div *ngIf="!items[0]">
-        <h5>No Item(s) Received</h5>
-    </div>
     <div class="row">
         <div class="col-xl-2 col-md-4 col-6 mt-3" *ngFor="let it of items">
             <div class="card">
