--- a/hims-frontend/src/app/dashboard/operations/item-receive/view/view.component.html
+++ b/hims-frontend/src/app/dashboard/operations/item-receive/view/view.component.html
@@ -1,33 +1,40 @@
 <section class="mt-4 px-5">
-    <form #search="ngForm" (ngSubmit)="onSearchItemReceived(search)">
-        <div class="row">
-            <div class="col-md-2">
-                <label class="form-label">Start Date</label>
-                <input type="date" class="form-control" name="start_date" #start_date="ngModel" ngModel required>
-            </div>
-            <div class="col-md-2">
-                <label class="form-label">End Date</label>
-                <input type="date" class="form-control" name="end_date" #end_date="ngModel" ngModel required>
-            </div>
-            <div class="col-md-2" *ngIf="isAdmin">
-                <label class="form-label">Hotel</label>
-                <select class="form-select" name="hotel" [ngModel]="''" #hotel="ngModel" required>
-                    <option disabled value="">---Select Hotel---</option>
-                    <option *ngFor="let h of hotels" [value]="h.id">{{ h.name }}</option>
-                </select>
-            </div>
-            <div class="col-md-2" *ngIf="isAdmin">
-                <label class="form-label">Department</label>
-                <select class="form-select" name="dept" [ngModel]="''" #dept="ngModel" required>
-                    <option disabled value="">---Select Department---</option>
-                    <option *ngFor="let d of departments" [value]="d.id">{{ d.name }}</option>
-                </select>
-            </div>
-            <div class="col-md-1">
-                <button class="btn btn-primary" style="margin-top: 31px;"><i class="bi bi-search"></i></button>
-            </div>
-        </div>  
-    </form>
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="w-75">
+            <form #search="ngForm" (ngSubmit)="onSearchItemReceived(search)">
+                <div class="row">
+                    <div class="col-md-2">
+                        <label class="form-label">Start Date</label>
+                        <input type="date" class="form-control" name="start_date" #start_date="ngModel" ngModel required>
+                    </div>
+                    <div class="col-md-2">
+                        <label class="form-label">End Date</label>
+                        <input type="date" class="form-control" name="end_date" #end_date="ngModel" ngModel required>
+                    </div>
+                    <div class="col-md-3" *ngIf="isAdmin">
+                        <label class="form-label">Hotel</label>
+                        <select class="form-select" name="hotel" (change)="onGetNames($event, 'h')" [ngModel]="''" #hotel="ngModel" required>
+                            <option disabled value="">---Select Hotel---</option>
+                            <option *ngFor="let h of hotels" [value]="h.id">{{ h.name }}</option>
+                        </select>
+                    </div>
+                    <div class="col-md-3" *ngIf="isAdmin">
+                        <label class="form-label">Department</label>
+                        <select class="form-select" name="dept" (change)="onGetNames($event, 'd')" [ngModel]="''" #dept="ngModel" required>
+                            <option disabled value="">---Select Department---</option>
+                            <option *ngFor="let d of departments" [value]="d.id">{{ d.name }}</option>
+                        </select>
+                    </div>
+                    <div class="col-md-1">
+                        <button class="btn btn-primary" style="margin-top: 31px;"><i class="bi bi-search"></i></button>
+                    </div>
+                </div>  
+            </form>
+        </div>
+        <div>
+            <button class="btn btn-primary" style="margin-top: 31px;" *ngIf="!isAdmin" (click)="onRouteReceiveItem()">Receive Item</button>
+        </div>
+    </div>
     <hr>
     <div class="row">
         <div class="col-xl-2 col-md-4 col-6 mt-3" *ngFor="let it of items">
@@ -37,7 +44,7 @@
                         <i class="bi bi-eye" style="color: blue;font-size: 20px;" (click)="onGetReceivedItems(it.batch_no)" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
                     </div>
                     <h5 class="card-title text-center mb-4" style="font-size: 50px;"><i class="bi bi-cart-check"></i></h5>
-                    <h6 class="card-subtitle mb-4 text-center" style="font-size: 20px;">Batch No.<br>{{it.batch_no}}</h6>
+                    <h6 class="card-subtitle mb-4 text-center" style="font-size: 18px;">Batch No.<br>{{it.batch_no}}</h6>
                 </div>
             </div>
         </div>
