--- a/hims-frontend/src/app/dashboard/operations/item-receive/view/view.component.html
+++ b/hims-frontend/src/app/dashboard/operations/item-receive/view/view.component.html
@@ -32,7 +32,7 @@
             </form>
         </div>
         <div>
-            <button class="btn btn-primary" style="margin-top: 31px;" *ngIf="!isAdmin" (click)="onRouteReceiveItem()">Receive Item</button>
+            <button class="btn btn-primary" style="margin-top: 31px;" (click)="onRouteReceiveItem()">Receive Item</button>
         </div>
     </div>
     <hr>
