--- a/hims-frontend/src/app/dashboard/operations/item-damage/edit/edit.component.html
+++ b/hims-frontend/src/app/dashboard/operations/item-damage/edit/edit.component.html
@@ -6,30 +6,44 @@
     <div style="margin-top: 30px;">
         <form #damaged="ngForm" (ngSubmit)="onAddItems(damaged)">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-2 mt-3" *ngIf="isAdmin">
+                    <label class="form-label">Hotel</label>
+                    <select class="form-select" [ngModel]="''" name="hotel" required (change)="onSetHotelId($event)">
+                        <option value="" disabled>---Select Hotel---</option>
+                        <option *ngFor="let h of hotels" [value]="h.id">{{ h.name }}</option>
+                    </select>
+                </div>
+                <div class="col-md-2 mt-3" *ngIf="isAdmin">
+                    <label class="form-label">Department</label>
+                    <select class="form-select" [ngModel]="''" name="department" required (change)="onSetDepartmentId($event)">
+                        <option value="" disabled>---Select Department---</option>
+                        <option *ngFor="let d of departments" [value]="d.id">{{ d.name }}</option>
+                    </select>
+                </div>
+                <div class="col-md-3 mt-3">
                     <label class="form-label">Item</label>
                     <select class="form-select" ngModel name="item_id" #item_id="ngModel" required (change)="onGetNamesValue($event)">
                         <option value="">---Select Options---</option>
                         <option *ngFor="let i of item_master" [value]="i.id">{{i.name}}</option>
                     </select>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 mt-3">
                     <label class="form-label">Opening Balance</label>
                     <input type="text" class="form-control" disabled [(ngModel)]="ob" name="opening_balance" required>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 mt-3">
                     <label class="form-label">Quantity</label>
                     <input type="text" class="form-control" ngModel name="quantity_damaged" #quantity_damaged="ngModel" required>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 mt-3">
                     <label class="form-label">Price Per Unit</label>
                     <input type="text" class="form-control" ngModel name="price_per_unit" #price_per_unit="ngModel" required>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 mt-3">
                     <label class="form-label">Expiry Date</label>
                     <input type="date" class="form-control" ngModel name="expiry" #expiry="ngModel" required>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 mt-3">
                     <label class="form-label">Remarks</label>
                     <input type="text" class="form-control" ngModel name="remarks" #remarks="ngModel">
                 </div>
