--- a/hims-frontend/src/app/dashboard/operations/item-return/edit/edit.component.html
+++ b/hims-frontend/src/app/dashboard/operations/item-return/edit/edit.component.html
@@ -3,6 +3,93 @@
         <h5>Return Item</h5>
     </div>
     <hr>
+    <main>
+        <div style="margin-top: 30px;">
+            <form #returned="ngForm" (ngSubmit)="onAddItems(returned)">
+                <div class="row">
+                    <div class="col-md-2 mt-3" *ngIf="isAdmin">
+                        <label class="form-label">Hotel</label>
+                        <select class="form-select" [ngModel]="''" name="hotel" required (change)="onSetHotelId($event)">
+                            <option value="" disabled>---Select Hotel---</option>
+                            <option *ngFor="let h of hotels" [value]="h.id">{{ h.name }}</option>
+                        </select>
+                    </div>
+                    <div class="col-md-2 mt-3" *ngIf="isAdmin">
+                        <label class="form-label">Department</label>
+                        <select class="form-select" [ngModel]="''" name="department" required (change)="onSetDepartmentId($event)">
+                            <option value="" disabled>---Select Department---</option>
+                            <option *ngFor="let d of departments" [value]="d.id">{{ d.name }}</option>
+                        </select>
+                    </div>
+                    <div class="col-md-3 mt-3">
+                        <label class="form-label">Item</label>
+                        <select class="form-select" ngModel name="item_id" #item_id="ngModel" required (change)="onGetNamesValue($event)">
+                            <option value="">---Select Options---</option>
+                            <option *ngFor="let i of item_master" [value]="i.id">{{i.name}}</option>
+                        </select>
+                    </div>
+                    <div class="col-md-2 mt-3">
+                        <label class="form-label">Opening Balance</label>
+                        <input type="text" disabled class="form-control" [(ngModel)]="ob" name="opening_balance" required>
+                    </div>
+                    <div class="col-md-1 mt-3">
+                        <label class="form-label">Quantity</label>
+                        <input type="text" class="form-control" ngModel name="quantity_returned" #quantity_returned="ngModel" required>
+                    </div>
+                    <div class="col-md-2 mt-3">
+                        <label class="form-label">Price Per Unit</label>
+                        <input type="text" class="form-control" ngModel name="price_per_unit" #price_per_unit="ngModel" required>
+                    </div>
+                    <div class="col-md-2 mt-3">
+                        <label class="form-label">Expiry Date</label>
+                        <input type="date" class="form-control" ngModel name="expiry" #expiry="ngModel" required>
+                    </div>
+                    <div class="col-md-2 mt-3">
+                        <label class="form-label">Remarks</label>
+                        <input type="text" class="form-control" ngModel name="remarks" #remarks="ngModel">
+                    </div>
+                </div>
+                <div class="text-end mt-3 mb-3">
+                    <button class="btn btn-primary" type="submit">Add</button>
+                </div>
+            </form>
+        </div>
+        <div class="table-responsive">
+            <div class="text-end" *ngIf="items[0]">
+                <button class="btn btn-primary mb-2" (click)="onSubmit();">Save</button>
+            </div>
+            <table class="table table-bordered" *ngIf="items[0]" style="margin-bottom: 30px;">
+                <thead>
+                    <tr>
+                        <th scope="col">S.No.</th>
+                        <th scope="col">Item</th>
+                        <th scope="col">Opening Balance</th>
+                        <th scope="col">Quantity</th>
+                        <th scope="col">Price Per Unit</th>
+                        <th scope="col">Expiry Date</th>
+                        <th scope="col">Remarks</th>
+                        <th scope="col">Operations</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let i of items; let id=index">
+                        <td>{{ id+1 }}</td>
+                        <td>{{ i.item_name }}</td>
+                        <td>{{ i.opening_balance }}</td>
+                        <td>{{ i.quantity_returned }}</td>
+                        <td>{{ i.unit_price }}</td>
+                        <td>{{ i.expiry_date | date: 'dd-MM-YYYY' }}</td>
+                        <td>{{ i.remarks || '' }}</td>
+                        <td><i class="bi bi-trash3 text-danger" (click)="onDeleteItem(i.item_name)"></i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="alert alert-success mt-3" *ngIf="showSuccess === 'true'">
+            Items Returned Successfully
+        </div>        
+    </main>
+    <!-- <ng-template #isNotAdmin>
         <div style="margin-top: 30px;">
             <form #returned="ngForm" (ngSubmit)="onAddItems(returned)">
                 <div class="row">
@@ -73,4 +160,5 @@
         <div class="alert alert-success mt-3" *ngIf="showSuccess === 'true'">
             Items Returned Successfully
         </div>
+    </ng-template> -->
 </section>
