--- a/hims-frontend/src/app/dashboard/operations/item-transfer/view/view.component.html
+++ b/hims-frontend/src/app/dashboard/operations/item-transfer/view/view.component.html
@@ -32,7 +32,7 @@
             </form>
         </div>
         <div>
-            <button class="btn btn-primary" style="margin-top: 31px;" *ngIf="!isAdmin" (click)="onRouteTransferItem()">Return Item</button>
+            <button class="btn btn-primary" style="margin-top: 31px;" (click)="onRouteTransferItem()">Transfer Item</button>
         </div>
     </div>
     <hr>
